 * Exporting relations by class name instead of kpath (may differ from site to site).
 * Using any character to build kpath if no character from the class name can be used.
 * Going through reverse order in console's foreach in case we destroy nodes.
 * Added support for "target" in [zazen] when rendering links.
 * Fixed kpath propagation to relations on kpath change.

== 1.2.0, 1.2.1 2012-05-01

* Major changes
 * Added 'remove_from_db' method to remove a site from the database.
 * Fixed asset caching PLEASE FIX YOUR VHOST FILES: rake zena:create_vhost -s host='xxxxx'.
 * Fixed deadlock_retry (a bug in the error message aborted the retry).
 * Created 'spreadsheet' brick to ease xlsx and csv generation. <===== TODO: Document
 * Better JS based grid editor.

* Minor changes
 * Enabled Acl during document upload.
 * Fixed a bug when using [edit] in a list with [add].
 * Fixed 'unknown this' bug in [calendar] when rendering in a [block].
 * Enabled 'alt_class' to work on multiple elements ([each]).
 * Fixed ajax bugs with dom_ids in nested partials.
 * Better Acl display, comments on relations.
 * Support for 'to_date' on time object with proper timezone translation. <===== TODO: Document
 * Time to 'year' should use timezone.
 * Added tprefix to [select] (with default value) to ease translated options for select. <===== TODO: Document
 * Fixed bug when using [input] checkbox with param.
 * Added jobs list in admin links.

== 1.1.3 2011-11-09

* Major changes
 * Does not expire compiled templates when working in dev mode by default.
 * Added 'monolingual' option for virtual classes. All TextDocuments are monolingual
   by default.

== 1.1.2 2011-11-09

* Minor changes
 * Support sorting by scope index fields.
 * Fixed bug in math brick (using Open4 instead of system with redirections).
 * Added 'change_prop' method in console.
 * Fixed a bug with 404 pages not showing in the correct language.
 * Fixed a bug with properties called 'copy' not working as expected.